--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js",
-    "build": "node index.js"
+    "start": "node index.js",
+    "build": "echo \"No build step required\""
   },
   "keywords": [],
   "author": "",
